--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -8,8 +8,8 @@
     text-align: center;
     background: linear-gradient(
         150deg,
-        rgba(255, 201, 7, .3),
-        rgba(22, 141, 226, .4)
+        rgba(255, 201, 7, 0.3),
+        rgba(22, 141, 226, 0.4)
       ),
       url(../img/fola.webp) no-repeat center top/cover;
   
