--- a/root/css/main.css
+++ b/root/css/main.css
@@ -53,7 +53,7 @@ html {
 }
 
 .home__name--last {
-  color: #51c4d3;
+  color: #168DE2;
   font-weight: 700;
 }
 
@@ -154,26 +154,10 @@ html {
 }
 
 .nav .menu-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: normal;
-      -ms-flex-align: normal;
-          align-items: normal;
   block-size: 100vh;
-  padding-right: 1rem;
+  inline-size: 60vw;
   list-style-type: none;
   background: #272727;
-  overflow: visible;
   text-transform: uppercase;
   color: white;
   -webkit-transform: translateX(-100%);
@@ -183,25 +167,28 @@ html {
 }
 
 .nav .menu-nav.open {
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .nav .menu-nav__item {
   display: inline-block;
-  -webkit-transform: translateX(-100vw);
-          transform: translateX(-100vw);
+  inline-size: 100%;
+  border-bottom: 1px solid;
+  text-align: center;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .nav .menu-nav__item.open {
-  -webkit-transform: translateX(70%);
-          transform: translateX(70%);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .nav .menu-nav__item.active > a {
-  color: #51c4d3;
+  color: #168DE2;
 }
 
 .nav .menu-nav__item:first-child {
@@ -219,7 +206,7 @@ html {
 }
 
 .nav .menu-nav__link:hover {
-  color: #51c4d3;
+  color: #168DE2;
 }
 
 .menu-nav__item:nth-child(1) {
@@ -253,8 +240,8 @@ html {
 .about__bio-image {
   width: 100%;
   height: 100vh;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(81, 196, 211, 0.1))), url(../img/fola.webp) center center/cover;
-  background: linear-gradient(to right rgba(39, 39, 39, 0.9), rgba(81, 196, 211, 0.1)), url(../img/fola.webp) center center/cover;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(22, 141, 226, 0.1))), url(../img/fola.webp) center center/cover;
+  background: linear-gradient(to right rgba(39, 39, 39, 0.9), rgba(22, 141, 226, 0.1)), url(../img/fola.webp) center center/cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,7 +320,7 @@ html {
 
 .about .jobs__job {
   background: #414141;
-  border-bottom: 5px solid #51c4d3;
+  border-bottom: 5px solid #168DE2;
   padding: 0.5rem;
 }
 
@@ -488,7 +475,7 @@ html {
 
 .projects__item {
   position: relative;
-  border-bottom: 5px solid #51c4d3;
+  border-bottom: 5px solid #168DE2;
   overflow: hidden;
   cursor: pointer;
 }
@@ -505,7 +492,7 @@ html {
   inline-size: 100%;
   block-size: 100%;
   opacity: 0;
-  background: #51c4d3;
+  background: #168DE2;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
@@ -594,31 +581,31 @@ html {
 
 @-webkit-keyframes radiant {
   0% {
-    -webkit-box-shadow: 0 1px 1px #51c4d3;
-            box-shadow: 0 1px 1px #51c4d3;
+    -webkit-box-shadow: 0 1px 1px #168DE2;
+            box-shadow: 0 1px 1px #168DE2;
   }
   50% {
-    -webkit-box-shadow: 0 3px 3px #51c4d3;
-            box-shadow: 0 3px 3px #51c4d3;
+    -webkit-box-shadow: 0 3px 3px #168DE2;
+            box-shadow: 0 3px 3px #168DE2;
   }
   100% {
-    -webkit-box-shadow: 0 1px 1px #51c4d3;
-            box-shadow: 0 1px 1px #51c4d3;
+    -webkit-box-shadow: 0 1px 1px #168DE2;
+            box-shadow: 0 1px 1px #168DE2;
   }
 }
 
 @keyframes radiant {
   0% {
-    -webkit-box-shadow: 0 1px 1px #51c4d3;
-            box-shadow: 0 1px 1px #51c4d3;
+    -webkit-box-shadow: 0 1px 1px #168DE2;
+            box-shadow: 0 1px 1px #168DE2;
   }
   50% {
-    -webkit-box-shadow: 0 3px 3px #51c4d3;
-            box-shadow: 0 3px 3px #51c4d3;
+    -webkit-box-shadow: 0 3px 3px #168DE2;
+            box-shadow: 0 3px 3px #168DE2;
   }
   100% {
-    -webkit-box-shadow: 0 1px 1px #51c4d3;
-            box-shadow: 0 1px 1px #51c4d3;
+    -webkit-box-shadow: 0 1px 1px #168DE2;
+            box-shadow: 0 1px 1px #168DE2;
   }
 }
 
@@ -657,12 +644,35 @@ html {
   font-size: 1.2rem;
 }
 
-.contact__list .contact__phone {
-  justify-self: flex-start;
+.contact__list address > div {
+  color: #FFC907;
 }
 
-.contact__list .contact__email > a {
-  display: block;
+.contact__list a {
+  display: inline-block;
+  inline-size: 75%;
+  outline: none;
+}
+
+.contact__list a:link {
+  color: #FFC907;
+}
+
+.contact__list a:visited {
+  color: #168DE2;
+}
+
+.contact__list a:focus {
+  border-bottom: 1px solid;
+}
+
+.contact__list a:hover {
+  background: #6d5500;
+  border-bottom: 1px solid;
+}
+
+.contact__list a:active {
+  color: #168DE2;
 }
 
 .contact .social-icons {
@@ -672,183 +682,12 @@ html {
 
 /* NAV
 ----------------------------------------*/
-@media screen and (min-width: 45em) {
-  .menu-btn {
-    display: none;
-  }
-  .nav {
-    visibility: visible;
-  }
-  .nav .menu-nav {
-    display: block;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    padding-bottom: 1em;
-    height: auto;
-    background: transparent;
-    text-align: right;
-  }
-  .nav .menu-nav__item {
-    display: inline;
-    padding-right: 2rem;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  .nav .menu-nav__link {
-    position: relative;
-    font-size: 1rem;
-    font-weight: 300;
-    padding-bottom: 1rem;
-  }
-  .nav .menu-nav__link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 0.1em;
-    border-top-right-radius: 50%;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-    -webkit-transform-origin: 0% 50%;
-            transform-origin: 0% 50%;
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-  }
-  .nav .menu-nav__link:hover {
-    color: white;
-  }
-  .nav .menu-nav__link:hover::before {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-    background: #51c4d3;
-  }
-  .nav.scroll {
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-    background: #272727;
-  }
-}
-
 /* PROJECTS
 ----------------------------------------*/
-@media screen and (min-width: 35em) {
-  .projects__items {
-    width: 70vw;
-    -ms-grid-columns: (minmax(auto, 25em))[2];
-        grid-template-columns: repeat(2, minmax(auto, 25em));
-    grid-gap: 1rem;
-  }
-  .projects__item:first-of-type {
-    grid-column: span 2;
-  }
-  .projects__item:nth-child(3) {
-    -webkit-box-ordinal-group: 7;
-        -ms-flex-order: 6;
-            order: 6;
-    grid-column: span 2;
-  }
-}
-
-@media screen and (min-width: 60em) {
-  .projects__items {
-    width: 70vw;
-    -ms-grid-columns: 1fr minmax(auto, 20em) 1fr;
-        grid-template-columns: 1fr minmax(auto, 20em) 1fr;
-    grid-gap: 1rem;
-  }
-  .projects__item:first-of-type {
-    font-size: 1.5em;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 3;
-    grid-row: 1/4;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .projects__item:last-of-type {
-    -ms-grid-row: 4;
-    grid-row: 4;
-    -ms-grid-column: 1;
-    grid-column: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .projects__item:last-of-type .projects__btns {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 3rem;
-  }
-  .projects__item:nth-child(3) {
-    font-size: 1.5em;
-    -ms-grid-row: 4;
-    grid-row: 4;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-  }
-}
-
 /* CONTACT
 ----------------------------------------*/
-@media screen and (min-width: 47em) {
-  .contact__list {
-    width: 80%;
-    margin: 0 auto;
-    -ms-grid-columns: (minmax(0, 1fr))[2];
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .contact__list > * {
-    justify-self: flex-end;
-  }
-  .contact__email {
-    padding-right: 2.5rem;
-  }
-}
-
-@media screen and (min-width: 70em) {
-  .contact__list {
-    -ms-grid-columns: (minmax(0, 1fr))[3];
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  .contact__list > * {
-    -ms-grid-column-align: unset;
-        justify-self: unset;
-  }
-  .contact__email {
-    padding-right: 0;
-  }
-}
-
-@media screen and (max-width: 22.5em) {
-  .contact h2 {
-    font-size: 2rem;
-  }
-  .contact__list {
-    font-size: 1rem;
-  }
-  .contact .social-icons {
-    font-size: 0.6rem;
-  }
-}
-
 /* HOME
 ----------------------------------------*/
-@media screen and (max-width: 22.5em) {
-  .home .social-icons,
-  .home footer {
-    font-size: 0.6rem;
-  }
-}
-
 /* ABOUT
 ----------------------------------------*/
 body {
@@ -871,7 +710,7 @@ a {
 }
 
 .text-secondary {
-  color: #51c4d3;
+  color: #168DE2;
 }
 
 header {
@@ -912,7 +751,7 @@ main.navigation .home, main.navigation .contact, main.navigation .about, main.na
 }
 
 .social-icons > a:hover {
-  color: #51c4d3;
+  color: #168DE2;
 }
 
 footer {
