--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,8 @@
 /* GENERAL STYLE
 ------------------------------ */
 $primary-color: #272727;
-$secondary-color: #51c4d3;
+$secondary-color: #168DE2;
+$yellow: #FFC907;
 $light-color: hsl(0,0%, 100%);
 
 html {
