--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -80,33 +80,31 @@
   }
  
   .menu-nav {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: normal;
-    // inline-size: 50vh;
     block-size: 100vh;
-    padding-right: 1rem;
+    inline-size: 60vw;
+    // padding-inline-end: 1rem;
     list-style-type: none;
     background: $primary-color;
-    overflow: visible;
+    // overflow: visible;
     text-transform: uppercase;
     color: set-text-color($primary-color);
     transform: translateX(-100%);
     @include transition-ease;
 
     &.open {
-      transform: translateX(-50%);
+      transform: translateX(0);
     }
 
     &__item {
       display: inline-block;
-      transform: translateX(-100vw);
+      inline-size: 100%;
+      border-bottom: 1px solid;
+      text-align: center;
+      transform: translateX(-100%);
       @include transition-ease;
       
       &.open {
-        transform: translateX(70%);
+        transform: translateX(0);
       }
       &.active > a {
         color: $secondary-color;
