--- a/root/css/main.css
+++ b/root/css/main.css
@@ -285,11 +285,11 @@ html {
 }
 
 .about__bio-image .header-cue {
-  width: 100%;
-  padding-block: 0.3rem;
+  padding-inline: 0.5rem;
+  padding-block: 0.5rem 0;
   background: #272727;
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   z-index: 1;
   -webkit-transform: translateY(5rem);
