--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,6 +5,12 @@ $secondary-color: #168DE2;
 $yellow: #FFC907;
 $light-color: hsl(0,0%, 100%);
 
+@mixin vendor-prefix($name, $value...) {
+    @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
+        #{$vendo}-#{$name}: #{$value};
+    }
+}
+
 html {
     box-sizing: border-box;
 }
