--- a/root/css/main.css
+++ b/root/css/main.css
@@ -513,7 +513,7 @@ html {
   block-size: 100%;
   display: -ms-grid;
   display: grid;
-  /* -ms-grid-columns: (1fr)[2]; */
+  -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   -webkit-box-align: center;
       -ms-flex-align: center;
