--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -56,8 +56,10 @@
 }
 .logo{
   position: absolute;
-  inset-block-start: 1rem;
-  inset-inline-end: 1rem;
+  // inset-block-start: 1rem;
+  bottom: 1rem;
+  // inset-inline-end: 1rem;
+  right: 1rem;
   block-size: 20px;
   inline-size: 28px;
   img {
