--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -19,7 +19,11 @@
     &::before {
       content: "";
       position: absolute;
-      inset: 0 0 0 0;
+      // inset: 0 0 0 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       background: url(../img/folaa.jpg) center center/cover;
       transform: translateY(300px) scale(1.2);
       opacity: 0;
@@ -30,7 +34,6 @@
       position: relative;
       font-size: 2rem;
       color: #fff;
-    //   margin-block-end: 2rem;
       opacity: 0;
       transform: translateX(-7rem);
       animation: clear 2s forwards;
@@ -61,8 +64,7 @@
     &::after {
       content: "";
       position: absolute;
-      inset-block-start: 100%;
-      inset-inline-start: 0;
+      left: 0;
       inline-size: 100%;
       block-size: 100%;
       opacity: 0;
@@ -83,7 +85,7 @@
 
   &__btns {
     position: absolute;
-    inset-block-start: 0;
+    top: 0;
     z-index: 1;
     inline-size: 100%;
     block-size: 100%;
