--- a/root/css/main.css
+++ b/root/css/main.css
@@ -489,6 +489,7 @@ html {
 .projects__item::after {
   content: "";
   position: absolute;
+  top: 100%;
   left: 0;
   inline-size: 100%;
   block-size: 100%;
