adjust the position of logo

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -128,7 +128,7 @@ html {
 
 .logo {
   position: absolute;
-  bottom: 1rem;
+  top: 1rem;
   right: 1rem;
   block-size: 20px;
   inline-size: 28px;
