--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -56,9 +56,7 @@
 }
 .logo{
   position: absolute;
-  // inset-block-start: 1rem;
-  bottom: 1rem;
-  // inset-inline-end: 1rem;
+  top: 1rem;
   right: 1rem;
   block-size: 20px;
   inline-size: 28px;
