--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -93,4 +93,20 @@ html {
         }
     }
 }
+@mixin slide {
+    @keyframes slide {
+        to{
+            opacity: 1;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
+@mixin frame {
+    @keyframes frame {
+        to{
+            opacity: 1;
+            transform: translate(-50%, -50%) rotate(-45deg);
+        }
+    }
+}
   
