--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,40 +1,65 @@
 /* HOME SECTION 
 -----------------------------*/
-.home{
-    transition: all 0.5s 0.3s ease-in-out;
-    height: 100%;
-    padding-top: 40vh;
-    overflow: hidden;
-    text-align: center;
-    background: linear-gradient(
-        150deg,
-        rgba(255, 201, 7, 0.3),
-        rgba(22, 141, 226, 0.4)
-      ),
-      url(../img/fola.webp) no-repeat center top/cover;
-  
-    & > h2:first-child {
-      font-size: 1em;
-      margin-block-end: 1rem;
-    }
-    & > h2:last-of-type {
-      font-size: 1.2em;
-    }
-  
-    &__name {
-      font-size: 3.5rem;
-      margin-bottom: 1rem;
-      padding-bottom: 1rem;
-      border-bottom: 2px solid set-text-color($primary-color);
-  
-      &--last {
-        color: $secondary-color;
-        font-weight: 700;
-      }
-    }
-    .social-icons{
-      bottom: 1rem;
-    }
-  
-}
+.home {
+  transition: all 0.5s 0.3s ease-in-out;
+  height: 100%;
+  padding-block-start: 35vh;
+  overflow: hidden;
+  text-align: center;
+  background: linear-gradient(
+      150deg,
+      rgba(255, 201, 7, 0.3),
+      rgba(22, 141, 226, 0.4)
+    ),
+    url(../img/fola.webp) no-repeat center top/cover;
 
+  h2:first-of-type {
+    font-size: 1em;
+    margin-block-end: 1rem;
+  }
+  h2:last-of-type {
+    font-size: 1.2em;
+  }
+
+  &__name {
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid set-text-color($primary-color);
+
+    &--last {
+      color: $secondary-color;
+      font-weight: 700;
+    }
+  }
+  .btn {
+    display: inline-block;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-block-start: 7rem;
+    cursor: pointer;
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    color: $primary-color;
+    text-transform: uppercase;
+    opacity: 0;
+    transform: translateY(-100%) scale(1.2);
+    animation: clear 0.5s 1s forwards;
+    &:link {
+      background: darken($color: $yellow, $amount: 10%);
+    }
+    &:visited {
+    }
+    &:focus {
+    }
+    &:hover {
+      background: $yellow;
+    }
+    &:active {
+    }
+  }
+  .social-icons {
+    bottom: 1rem;
+  }
+}
