--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,60 +1,60 @@
 /* MENU BUTTON
 ----------------------------------- */
-.menu-btn {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  z-index: 1;
-  block-size: 20px;
-  inline-size: 28px;
-  color: set-text-color($primary-color);
-  cursor: pointer;
-  @include transition-ease;
+// .menu-btn {
+//   position: absolute;
+//   top: 1rem;
+//   left: 1rem;
+//   z-index: 1;
+//   block-size: 20px;
+//   inline-size: 28px;
+//   color: set-text-color($primary-color);
+//   cursor: pointer;
+//   @include transition-ease;
 
-  &__burger {
-    position: absolute;
-    left: 0;
-    top: 0.5rem;
-    inline-size: 28px;
-    block-size: 3px;
-    background-color: set-text-color($primary-color);
-    @include transition-ease;
+//   &__burger {
+//     position: absolute;
+//     left: 0;
+//     top: 0.5rem;
+//     inline-size: 28px;
+//     block-size: 3px;
+//     background-color: set-text-color($primary-color);
+//     @include transition-ease;
 
-    &::before {
-      position: inherit;
-      content: "";
-      top: -8px;
-      inline-size: inherit;
-      block-size: 3px;
-      background: set-text-color($primary-color);
-      @include transition-ease;
-    }
+//     &::before {
+//       position: inherit;
+//       content: "";
+//       top: -8px;
+//       inline-size: inherit;
+//       block-size: 3px;
+//       background: set-text-color($primary-color);
+//       @include transition-ease;
+//     }
 
-    &::after {
-      position: inherit;
-      content: "";
-      top: 8px;
-      inline-size: 20px;
-      block-size: 3px;
-      background: set-text-color($primary-color);
-      @include transition-ease;
-    }
+//     &::after {
+//       position: inherit;
+//       content: "";
+//       top: 8px;
+//       inline-size: 20px;
+//       block-size: 3px;
+//       background: set-text-color($primary-color);
+//       @include transition-ease;
+//     }
 
-    &.open {
-      background: transparent; // you can't use opacity or visibility here
-      transform: rotate(720deg);
+//     &.open {
+//       background: transparent; // you can't use opacity or visibility here
+//       transform: rotate(720deg);
 
-      &::before {
-        transform: rotate(45deg) translate(5px, 8px);
-      }
-      &::after {
-        inline-size: inherit;
-        transform: rotate(-45deg) translate(3px, -7px);
-      }
-    }
-  }
-}
-.logo{
+//       &::before {
+//         transform: rotate(45deg) translate(5px, 8px);
+//       }
+//       &::after {
+//         inline-size: inherit;
+//         transform: rotate(-45deg) translate(3px, -7px);
+//       }
+//     }
+//   }
+// }
+.logo {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -68,65 +68,117 @@
 /* THE NAVIGATION MENU
 -----------------------------------------*/
 .nav {
-  visibility: hidden;
-  opacity: 0.9;
-  inline-size: 100vw;
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
+  background: radial-gradient(
+    circle at 13.5% 0,
+    transparent 36px,
+    #d3a500 37px
+  );
+  transition: cubic-bezier(0.57, 0.23, 0.08, 0.96) 0.45s;
 
-  &.open {
-    visibility: visible;
-  }
- 
+  // left: 0;
+  // right: 0;
+  // visibility: hidden;
+  // opacity: 0.9;
+
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+
+  // &.open {
+  //   visibility: visible;
+  // }
+
   .menu-nav {
-    block-size: 100vh;
-    inline-size: 60vw;
+    display: flex;
+    inline-size: 80%;
+    height: 50px;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
     list-style-type: none;
-    background: $primary-color;
-    text-transform: uppercase;
-    color: set-text-color($primary-color);
-    transform: translateX(-100%);
-    @include transition-ease;
+    filter: drop-shadow(0px -1px 6px rgba(0, 0, 0, 0.08))
+      drop-shadow(0px -2px 12px rgba(0, 0, 0, 0.12));
+    // border-bottom-left-radius: 30px;
+    // border-bottom-right-radius: 30px;
+    // block-size: 100vh;
+    // inline-size: 60vw;
+    // background: $primary-color;
+    // text-transform: uppercase;
+    // color: set-text-color($primary-color);
+    // transform: translateX(-100%);
+    // @include transition-ease;
 
-    &.open {
-      transform: translateX(0);
-    }
+    // &.open {
+    //   transform: translateX(0);
+    // }
 
     &__item {
-      display: inline-block;
-      inline-size: 100%;
-      border-bottom: 1px solid;
-      transform: translateX(-100%);
+      // display: inline-block;
+      // color: $primary-color;
+      // inline-size: 100%;
+      // border-bottom: 1px solid $primary-color;
+      // transform: translateX(-100%);
       @include transition-ease;
-      
-      &.open {
-        transform: translateX(0);
-      }
+
+      // &.open {
+      //   transform: translateX(0);
+      // }
       &.active > a {
-        color: $secondary-color;
+        // color: $primary-color;
       }
-      &:first-child{
-        margin-block-start: 5rem;
-      }
+      // &:first-child{
+      //   margin-block-start: 5rem;
+      // }
     }
 
     &__link {
-      display: inline-block;
-      margin: 2rem 0 2rem 3rem;
-      font-size: 1.3rem;
-      font-weight: 300;
-      @include transition-ease;
-
-      &:hover {
-        color: $secondary-color;
+      color: $primary-color;
+      i {
+        display: block;
+        height: 100%;
+        width: 100%;
       }
+      // display: inline-block;
+      // margin: 2rem 0 2rem 3rem;
+      // font-size: 1.3rem;
+      // font-weight: 300;
+      // @include transition-ease;
+
+      // &:hover {
+      //   color: $secondary-color;
+      // }
     }
   }
-}
+  .sc-current .menu-nav__link {
+    color: $light-color ;
+  }
 
-@for $i from 1 through 4 {
-  .menu-nav__item:nth-child(#{$i}) {
-    transition-delay: $i * 0.2s;
+  .sc-nav-indicator {
+    position: absolute;
+    width: 56px;
+    height: 56px;
+    bottom: 1.4rem;
+    left: 1.4rem;
+    background-color: darken($primary-color, 100%);
+    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.08),
+      0px 3px 6px rgba(0, 0, 0, 0.12);
+    border-radius: 50%;
+    transition: cubic-bezier(0.45, 0.73, 0, 0.59) 0.3s;
+  }
+  .sc-current {
+    position: relative;
+    z-index: 3;
+    transform: translate3d(0px, -22px, 0px);
   }
 }
+
+// @for $i from 1 through 4 {
+//   .menu-nav__item:nth-child(#{$i}) {
+//     transition-delay: $i * 0.2s;
+//   }
+// }
