--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@ main.navigation {
 }
 
 .social-icons {
+    display: none;
     position: fixed;
     left: 0;
     bottom: 0.2rem;
@@ -66,6 +67,7 @@ main.navigation {
 }
 
 footer {
+    display: none;
     position: fixed;
     bottom: 0rem;
     right: 1rem;
