--- a/root/css/main.css
+++ b/root/css/main.css
@@ -6,7 +6,9 @@ html {
           box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
   margin: 0;
@@ -33,7 +35,10 @@ html {
           padding-block-start: 35vh;
   overflow: hidden;
   text-align: center;
-  background: linear-gradient(150deg, rgba(255, 201, 7, 0.3), rgba(22, 141, 226, 0.4)), url(../img/fola.webp) no-repeat center top/cover;
+  background: linear-gradient(-45deg, rgba(255, 201, 7, 0.8), rgba(22, 141, 226, 0.8));
+  background-size: 200% 200%;
+  -webkit-animation: gradient-flow 4s ease-in-out infinite;
+          animation: gradient-flow 4s ease-in-out infinite;
 }
 
 .home h2:first-of-type {
@@ -54,7 +59,7 @@ html {
 }
 
 .home__name--last {
-  color: #168DE2;
+  color: #168de2;
   font-weight: 700;
 }
 
@@ -81,11 +86,36 @@ html {
 }
 
 .home .btn:hover {
-  background: #FFC907;
+  background: #ffc907;
 }
 
 .home .social-icons {
+  display: none;
   bottom: 1rem;
+}
+
+@-webkit-keyframes gradient-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* MENU BUTTON
@@ -93,7 +123,7 @@ html {
 .logo {
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  left: 1rem;
   block-size: 20px;
   inline-size: 28px;
 }
@@ -138,8 +168,16 @@ html {
   transition: all 0.5s ease-in-out;
 }
 
+.nav .menu-nav__item.active.sc-current > a {
+  color: white;
+}
+
 .nav .menu-nav__link {
   color: #272727;
+}
+
+.nav .menu-nav__link span {
+  display: none;
 }
 
 .nav .menu-nav__link i {
@@ -148,16 +186,12 @@ html {
   width: 100%;
 }
 
-.nav .sc-current .menu-nav__link {
-  color: white;
-}
-
 .nav .sc-nav-indicator {
   position: absolute;
   width: 56px;
   height: 56px;
   bottom: 1.4rem;
-  left: 1.4rem;
+  left: 0;
   background-color: black;
   -webkit-box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.08), 0px 3px 6px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.08), 0px 3px 6px rgba(0, 0, 0, 0.12);
@@ -176,7 +210,7 @@ html {
 /* ABOUT SECTION 
 --------------------------------*/
 .about {
-  padding-bottom: 2rem;
+  padding-bottom: 15vh;
   -webkit-transition: all 0.5s 0.3s ease-in-out;
   transition: all 0.5s 0.3s ease-in-out;
 }
@@ -184,8 +218,8 @@ html {
 .about__bio-image {
   width: 100%;
   height: 100vh;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(22, 141, 226, 0.1))), url(../img/fola.webp) center center/cover;
-  background: linear-gradient(to right rgba(39, 39, 39, 0.9), rgba(22, 141, 226, 0.1)), url(../img/fola.webp) center center/cover;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(22, 141, 226, 0.4))), url(../img/fola.webp) center center/cover;
+  background: linear-gradient(to right rgba(39, 39, 39, 0), rgba(22, 141, 226, 0.4)), url(../img/fola.webp) center center/cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -208,6 +242,8 @@ html {
 }
 
 .about__bio-image .about__bio .text-secondary {
+  color: #ffc907;
+  font-size: 6vmin;
   -webkit-padding-after: 1rem;
           padding-block-end: 1rem;
   opacity: 0;
@@ -218,6 +254,7 @@ html {
 }
 
 .about__bio-image .about__bio p {
+  font-size: 4vmin;
   -webkit-margin-after: 2rem;
           margin-block-end: 2rem;
   text-align: justify;
@@ -230,12 +267,22 @@ html {
 }
 
 .about__bio-image .header-cue {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 1rem;
   padding-inline: 0.5rem;
   padding-block: 0.5rem 0;
-  background: #272727;
   text-align: center;
-  position: fixed;
-  bottom: 0;
+  position: absolute;
+  bottom: 25vmin;
   z-index: 1;
   -webkit-transform: translateY(5rem);
           transform: translateY(5rem);
@@ -244,12 +291,25 @@ html {
           animation: clear 0.5s 1.5s forwards;
 }
 
-.about__bio-image .header-cue-icon {
+.about__bio-image .header-cue__icon {
+  font-size: 5vmin;
+  color: #a07d00;
   opacity: 0;
   -webkit-transform: translateY(-2rem);
           transform: translateY(-2rem);
-  -webkit-animation: clear 0.5s 1.8s forwards, pulse 1.5s 2.5s infinite;
-          animation: clear 0.5s 1.8s forwards, pulse 1.5s 2.5s infinite;
+  -webkit-animation: clear 0.5s 1.8s forwards, bounce 1.5s 2.5s  infinite;
+          animation: clear 0.5s 1.8s forwards, bounce 1.5s 2.5s  infinite;
+}
+
+.about__bio-image .header-cue__cap {
+  opacity: 0;
+  font-size: 100%;
+  font-style: oblique;
+  color: #a7a7a7;
+  -webkit-transform: translateY(10rem);
+          transform: translateY(10rem);
+  -webkit-animation: clear 0.5s 2s forwards;
+          animation: clear 0.5s 2s forwards;
 }
 
 .about .jobs {
@@ -264,7 +324,7 @@ html {
 
 .about .jobs__job {
   background: #414141;
-  border-bottom: 5px solid #168DE2;
+  border-bottom: 5px solid #168de2;
   padding: 0.5rem;
   text-align: justify;
 }
@@ -272,20 +332,25 @@ html {
 .about .jobs__job h2,
 .about .jobs__job h3 {
   margin: 0.5rem 0;
+  font-size: 4vmin;
+}
+
+.about .jobs__job h3 {
+  color: #cccccc;
 }
 
 .about .jobs__job h6 {
   margin: 0.3rem 0;
+  font-size: 100%;
 }
 
 .about .jobs__job p {
-  font-size: 0.9rem;
+  line-height: 1.2;
+  font-size: 100%;
 }
 
 .about .social-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -293,6 +358,7 @@ html {
 }
 
 .about footer {
+  display: none;
   -webkit-transform: rotate(90deg) translate(-3rem, -5rem);
           transform: rotate(90deg) translate(-3rem, -5rem);
 }
@@ -315,14 +381,12 @@ html {
 
 @-webkit-keyframes pulse {
   0% {
-    -webkit-transform: none;
-            transform: none;
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1);
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
   }
@@ -335,14 +399,12 @@ html {
 
 @keyframes pulse {
   0% {
-    -webkit-transform: none;
-            transform: none;
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1);
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
   }
@@ -353,10 +415,42 @@ html {
   }
 }
 
+@-webkit-keyframes bounce {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(-1px);
+            transform: translateY(-1px);
+  }
+  50% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(-1px);
+            transform: translateY(-1px);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(-1px);
+            transform: translateY(-1px);
+  }
+  50% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(-1px);
+            transform: translateY(-1px);
+  }
+}
+
 /* PROJECT SECTION 
 --------------------------------*/
 .projects {
-  padding-bottom: 2rem;
+  padding-bottom: 15vh;
   -webkit-transition: all 0.5s 0.3s ease-in-out;
   transition: all 0.5s 0.3s ease-in-out;
 }
@@ -423,7 +517,7 @@ html {
 
 .projects__item {
   position: relative;
-  border-bottom: 5px solid #168DE2;
+  border-bottom: 5px solid #168de2;
   overflow: hidden;
   cursor: pointer;
 }
@@ -440,7 +534,7 @@ html {
   inline-size: 100%;
   block-size: 100%;
   opacity: 0;
-  background: #168DE2;
+  background: #168de2;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
@@ -485,9 +579,7 @@ html {
 }
 
 .projects .social-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -495,6 +587,7 @@ html {
 }
 
 .projects footer {
+  display: none;
   -webkit-transform: rotate(90deg) translate(-3rem, -5rem);
           transform: rotate(90deg) translate(-3rem, -5rem);
 }
@@ -509,14 +602,12 @@ html {
 
 @keyframes pulse {
   0% {
-    -webkit-transform: none;
-            transform: none;
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1);
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
   }
@@ -529,31 +620,31 @@ html {
 
 @-webkit-keyframes radiant {
   0% {
-    -webkit-box-shadow: 0 1px 1px #168DE2;
-            box-shadow: 0 1px 1px #168DE2;
+    -webkit-box-shadow: 0 1px 1px #168de2;
+            box-shadow: 0 1px 1px #168de2;
   }
   50% {
-    -webkit-box-shadow: 0 3px 3px #168DE2;
-            box-shadow: 0 3px 3px #168DE2;
+    -webkit-box-shadow: 0 3px 3px #168de2;
+            box-shadow: 0 3px 3px #168de2;
   }
   100% {
-    -webkit-box-shadow: 0 1px 1px #168DE2;
-            box-shadow: 0 1px 1px #168DE2;
+    -webkit-box-shadow: 0 1px 1px #168de2;
+            box-shadow: 0 1px 1px #168de2;
   }
 }
 
 @keyframes radiant {
   0% {
-    -webkit-box-shadow: 0 1px 1px #168DE2;
-            box-shadow: 0 1px 1px #168DE2;
+    -webkit-box-shadow: 0 1px 1px #168de2;
+            box-shadow: 0 1px 1px #168de2;
   }
   50% {
-    -webkit-box-shadow: 0 3px 3px #168DE2;
-            box-shadow: 0 3px 3px #168DE2;
+    -webkit-box-shadow: 0 3px 3px #168de2;
+            box-shadow: 0 3px 3px #168de2;
   }
   100% {
-    -webkit-box-shadow: 0 1px 1px #168DE2;
-            box-shadow: 0 1px 1px #168DE2;
+    -webkit-box-shadow: 0 1px 1px #168de2;
+            box-shadow: 0 1px 1px #168de2;
   }
 }
 
@@ -563,7 +654,7 @@ html {
   -webkit-transition: all 0.5s 0.3s ease-in-out;
   transition: all 0.5s 0.3s ease-in-out;
   height: 100%;
-  padding-top: 40vh;
+  padding-top: 35vh;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -575,7 +666,8 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: linear-gradient(150deg, rgba(255, 201, 7, 0.3), rgba(22, 141, 226, 0.4)), url(../img/fola.webp) no-repeat center top/cover;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 201, 7, 0.4))), url(../img/fola.webp) no-repeat center top/cover;
+  background: linear-gradient(to right rgba(39, 39, 39, 0), rgba(255, 201, 7, 0.4)), url(../img/fola.webp) no-repeat center top/cover;
 }
 
 .contact h2 {
@@ -601,7 +693,7 @@ html {
 }
 
 .contact__list address > div {
-  color: #FFC907;
+  color: #ffd43a;
 }
 
 .contact__list a {
@@ -611,11 +703,12 @@ html {
 }
 
 .contact__list a:link {
-  color: #FFC907;
+  color: #56afef;
+  border-bottom: 1px solid;
 }
 
 .contact__list a:visited {
-  color: #168DE2;
+  color: #ffc907;
 }
 
 .contact__list a:focus {
@@ -623,12 +716,12 @@ html {
 }
 
 .contact__list a:hover {
-  background: #6d5500;
-  border-bottom: 1px solid;
+  color: #a07d00;
+  border-bottom: none;
 }
 
 .contact__list a:active {
-  color: #168DE2;
+  color: #ffc907;
 }
 
 .contact .social-icons {
@@ -636,9 +729,16 @@ html {
   margin-top: 10%;
 }
 
+.contact footer {
+  position: absolute;
+  right: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  bottom: 10%;
+  color: silver;
+}
+
 @media screen and (min-width: 45em) {
-  /* NAV
-  ----------------------------------------*/
   header {
     position: absolute !important;
     overflow-x: hidden;
@@ -656,12 +756,21 @@ html {
   .logo img {
     inline-size: 100%;
   }
+  /* NAV
+  ----------------------------------------*/
   .nav {
+    overflow: hidden;
     position: static;
+    background: transparent;
     visibility: visible;
   }
+  .nav .sc-nav-indicator {
+    display: none;
+  }
   .nav .menu-nav {
-    display: block;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     height: auto;
     inline-size: 100%;
     -webkit-transform: translateX(0);
@@ -679,12 +788,20 @@ html {
             transform: translateX(0);
   }
   .nav .menu-nav__link {
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     position: relative;
     font-size: 1rem;
     font-weight: 300;
-    -webkit-padding-after: 0.8rem;
-            padding-block-end: 0.8rem;
+    color: #8d8d8d;
+    text-transform: uppercase;
     margin: 0;
+  }
+  .nav .menu-nav__link span {
+    display: initial;
+  }
+  .nav .menu-nav__link i {
+    display: none;
   }
   .nav .menu-nav__link::before {
     content: "";
@@ -767,7 +884,7 @@ html {
     background: #d3a500;
   }
   .home__wrapper .left .btn:hover {
-    background: #FFC907;
+    background: #ffc907;
   }
   .home__wrapper .right {
     position: relative;
@@ -790,7 +907,7 @@ html {
     opacity: 0;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
-    background: url(../img/fola.webp) no-repeat center top/cover;
+    background: url(../img/fola-home.jpeg) no-repeat center top/cover;
     border-radius: 20px;
     -webkit-box-shadow: 0 0 10px black;
             box-shadow: 0 0 10px black;
@@ -804,8 +921,8 @@ html {
     left: 50%;
     inline-size: 320px;
     block-size: 320px;
-    border-top: 10px solid #168DE2;
-    border-bottom: 10px solid #168DE2;
+    border-top: 10px solid #168de2;
+    border-bottom: 10px solid #168de2;
     border-radius: 30px;
     -webkit-box-shadow: 0 0 10px black;
             box-shadow: 0 0 10px black;
@@ -820,8 +937,8 @@ html {
     left: 50%;
     inline-size: 320px;
     block-size: 320px;
-    border-left: 10px solid #FFC907;
-    border-right: 10px solid #FFC907;
+    border-left: 10px solid #ffc907;
+    border-right: 10px solid #ffc907;
     border-radius: 30px;
     -webkit-box-shadow: 0 0 10px black;
             box-shadow: 0 0 10px black;
@@ -932,7 +1049,7 @@ a {
 }
 
 .text-secondary {
-  color: #168DE2;
+  color: #168de2;
 }
 
 header {
@@ -960,7 +1077,6 @@ main.navigation .home, main.navigation .contact, main.navigation .about, main.na
 }
 
 .social-icons {
-  display: none;
   position: fixed;
   left: 0;
   bottom: 0.2rem;
@@ -974,11 +1090,10 @@ main.navigation .home, main.navigation .contact, main.navigation .about, main.na
 }
 
 .social-icons > a:hover {
-  color: #168DE2;
+  color: #168de2;
 }
 
 footer {
-  display: none;
   position: fixed;
   bottom: 0rem;
   right: 1rem;
