--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,15 +1,15 @@
 /* ABOUT SECTION 
 --------------------------------*/
 .about {
-  padding-bottom: 2rem;
+  padding-bottom: 15vh;
   transition: all 0.5s 0.3s ease-in-out;
 
   &__bio-image {
     width: 100%;
     height: 100vh;
     background: linear-gradient(
-        to right rgba($primary-color, 0.9),
-        rgba($secondary-color, 0.1)
+        to right rgba($primary-color, 0),
+        rgba($secondary-color, 0.4)
       ),
       url(../img/fola.webp) center center/cover;
 
@@ -24,12 +24,15 @@
       text-align: center;
 
       .text-secondary {
+        color: $yellow;
+        font-size: 6vmin;
         padding-block-end: 1rem;
         opacity: 0;
         transform: translateX(-7rem);
         animation: clear 1s forwards;
       }
       p {
+        font-size: 4vmin;
         margin-block-end: 2rem;
         text-align: justify;
         text-align-last: center;
@@ -39,21 +42,33 @@
       }
     }
     .header-cue {
-      // width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 1rem;
       padding-inline: 0.5rem;
       padding-block: 0.5rem 0;
-      background: $primary-color;
       text-align: center;
-      position: fixed;
-      bottom: 0;
+      position: absolute;
+      bottom: 25vmin;
       z-index: 1;
       transform: translateY(5rem);
       overflow: hidden;
       animation: clear 0.5s 1.5s forwards;
-      &-icon {
+      &__icon {
+        font-size: 5vmin;
+        color: darken($yellow, 20%);
         opacity: 0;
         transform: translateY(-2rem);
-        animation: clear 0.5s 1.8s forwards, pulse 1.5s 2.5s infinite;
+        animation: clear 0.5s 1.8s forwards, bounce 1.5s 2.5s  infinite;
+      }
+      &__cap {
+        opacity: 0;
+        font-size: 100%;
+        font-style: oblique;
+        color: lighten($primary-color, 50%);
+        transform: translateY(10rem);
+        animation: clear 0.5s 2s forwards;
       }
     }
   }
@@ -74,27 +89,35 @@
       h2,
       h3 {
         margin: 0.5rem 0;
+        font-size: 4vmin;
+      }
+      h3 {
+        color: darken($color: ($light-color), $amount: 20%);
       }
 
       h6 {
         margin: 0.3rem 0;
+        font-size: 100%;
       }
 
       p {
-        font-size: 0.9rem;
+        line-height: 1.2;
+        font-size: 100%;
       }
     }
   }
 
   .social-icons {
-    display: flex;
+    display: none;
     flex-direction: column;
   }
 
   footer {
+    display: none;
     transform: rotate(90deg) translate(-3rem, -5rem);
   }
 }
 
 @include clear;
 @include pulse;
+@include bounce;
