--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,15 +3,14 @@
 .contact {
   transition: all 0.5s 0.3s ease-in-out;
   height: 100%;
-  padding-top: 40vh;
+  padding-top: 35vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: linear-gradient(
-      150deg,
-      rgba(255, 201, 7, .3),
-      rgba(22, 141, 226, .4)
+    to right rgba($primary-color, 0),
+    rgba($yellow, 0.4)
     ),
     url(../img/fola.webp) no-repeat center top/cover;
 
@@ -30,7 +29,7 @@
     align-items: flex-end;
 
     address > div {
-      color: $yellow;
+      color: lighten($yellow, 10%);
     }
 
     a {
@@ -38,20 +37,21 @@
       inline-size: 75%;
       outline: none;
       &:link {
-        color: $yellow;
+        color: lighten($secondary-color, 15%);
+        border-bottom:  1px solid;
       }
       &:visited{
-        color: $secondary-color;
+        color: $yellow;
       }
       &:focus{
         border-bottom: 1px solid;
       }
       &:hover {
-        background: darken($color: $yellow, $amount: 30%);
-        border-bottom: 1px solid;
+        color: darken($color: $yellow, $amount: 20%);
+        border-bottom: none;
       }
       &:active{
-        color: $secondary-color;
+        color: $yellow;
       }
     }
   }
@@ -59,5 +59,12 @@
   .social-icons {
     position: initial;
     margin-top: 10%;
+  }
+  footer {
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 10%;
+    color: lighten($primary-color, 60%);
   }
 }
