--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -7,11 +7,12 @@
   overflow: hidden;
   text-align: center;
   background: linear-gradient(
-      150deg,
-      rgba(255, 201, 7, 0.3),
-      rgba(22, 141, 226, 0.4)
-    ),
-    url(../img/fola.webp) no-repeat center top/cover;
+    -45deg,
+    rgba(255, 201, 7, 0.8),
+    rgba(22, 141, 226, 0.8)
+  );
+  background-size: 200% 200%;
+  animation: gradient-flow 4s ease-in-out infinite;
 
   h2:first-of-type {
     font-size: 1em;
@@ -60,6 +61,8 @@
     }
   }
   .social-icons {
+    display: none;
     bottom: 1rem;
   }
 }
+@include gradient-flow;
